shell/dennis/deploy_01.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'httpd-01'
spec:
  selector:
    matchLabels:
      app: httpd-01
  replicas: 1
  template:
    metadata:
      labels:
        app: httpd-01
    spec:
      containers:
        - name: httpd-01
          image: >-
            image-registry.openshift-image-registry.svc:5000/openshift/httpd:latest
          ports:
            - containerPort: 8080
              protocol: TCP
